# chat_project

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
chat_app/config/: asgi.py  settings.py  urls.py  wsgi.py
