[tool.poetry]
name = "chat_project"
version = "0.1.0"
description = "Practice chat project"
authors = ["Alexey Ermilov <alex.erm@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core=1.3.0"]
build-backend = "poetry.core.masonry.api"
